Fix img out of screen like !debug e !zinghero

--- a/SonequaBot.Web/wwwroot/css/site.css
+++ b/SonequaBot.Web/wwwroot/css/site.css
@@ -16,6 +16,10 @@
     animation: opacityOnAndOff 5s ease 10 normal;
 }
 
+#outputContainer img {
+    max-height: 100%;
+}
+
 @keyframes opacityOnAndOff {
     0% {
         opacity: 0;
